--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ python:
   - '3.4'
   - '3.5'
   - '3.6'
+  - '3.7'
+  - '3.8'
   - 'pypy3.5'
 # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+# matrix:
+#   include:
+#     - python: 3.7
+#       dist: xenial
+#       sudo: true
 
 install: pip install .[pinq,pyxl]
 
